lead scoring/force-app/main/default/objects/LeadScoringRule__mdt/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Operation to perform (Equals, Contains, etc.)</description>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>NotEquals</fullName>
                <label>Not Equals</label>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>