lead scoring/force-app/main/default/objects/LeadScoringRule__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value to compare against</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>